<?xml version="1.0"?>
<package>
<name>sas_clock</name>
<version>0.0.0</version>
<description>The sas_clock package.</description>
<maintainer email="murilomarinho@ieee.org">Murilo M. Marinho</maintainer>
<license>LGPLv3</license>

<buildtool_depend>ament_cmake</buildtool_depend>

<export>
<build_type>ament_cmake</build_type>
</export>
</package>
